dumps/data-science-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    sidecar.istio.io/proxyCPU: "2"
    sidecar.istio.io/proxyCPULimit: "4"
    sidecar.istio.io/proxyMemory: 4Gi
    sidecar.istio.io/proxyMemoryLimit: 8Gi
  labels:
    istio.io/rev: openshift-gateway
    platform.opendatahub.io/part-of: gatewayconfig
  name: data-science-gateway
  namespace: openshift-ingress
spec:
  gatewayClassName: data-science-gateway-class
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: data-science-gateway-config
  listeners:
    - allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - openshift-ingress
                  - redhat-ods-applications
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: data-science-gateway-service-tls
        mode: Terminate
